@@ -1,3 +1,8 @@
+2001-07-27  Philippe Elie  <ph_e@club-internet.fr>
+
+	* pp/oprof_convert.c: fix bug when conversion skip more than one
+	  version.
+
 2001-07-27  John Levon  <moz@compsoc.man.ac.uk>
 
 	* doc/Makefile.in: ln -s -> ln -sf
